--- a/index/static/style.css
+++ b/index/static/style.css
@@ -598,7 +598,7 @@ a:hover {
   box-shadow: rgba(0,0,0,.5) 0 2px 3px;
   z-index: 100;
 }
-#dopebar-drop {
+#dopebar-wrapper {
   padding: 0;
 }
 #dopebar-l {
@@ -772,7 +772,6 @@ a:hover {
   text-align: center;
 }
 #showpod-r {
-  align-self: flex-end;
 }
 .showpod-side-list {
   list-style: none;
@@ -781,10 +780,15 @@ a:hover {
 }
 .showpod-side-list li {
   border-bottom: 2px solid rgba(0, 191, 165, 1);
-  margin-top: 10px;
+  margin-top: 5px;
 }
 .showpod-options {
-  padding-top: 15px;
+  padding-top: 10px;
+  display: inline-block;
+}
+.showpod-extra-options {
+  padding-top: 10px;
+  float: right;
 }
 #showpod-copyright {
 }
@@ -990,7 +994,7 @@ a:hover {
 }
 .view-button {
 }
-.back-button {
+.results-back {
   float: left;
 }
 .extra-options {
@@ -1153,6 +1157,7 @@ a:hover {
 .last-played-top {
   height: 100px;
   position: relative;
+  overflow: hidden;
 }
 .last-played-top img {
   float: left;
@@ -1167,14 +1172,15 @@ a:hover {
   background: rgba(0, 0, 0, .5);
 }
 .last-played-top .result-title {
+/* TODO make inline without breaking */
   font-size: 16px;
-  margin-bottom: 3px;
+  margin-bottom: 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 .last-played-top .result-episode {
-  margin-bottom: 3px;
+  margin-bottom: 5px;
   height: 40px;
   overflow: hidden;
   font-size: 14px;
