--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,6 +1,6 @@
 {% if player.episode %}
-<div class="row">
-  <div class="col-12 color-5" id="player-wrapper">
+<div class="col-12 col-md-4 ml-auto">
+  <div class="color-5" id="player-wrapper">
     <a class="showpod" id="player-image" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}">
       <img class="img-fluid" src="//images.weserv.nl/?url={{ player.episode.podcast.artworkUrl }}360x360bb.jpg&w=100&h=100&t=absolute" />
     </a>
@@ -13,9 +13,11 @@
       </a>
     </div>
     <a class="showpod" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}">
-      <h1 id="player-title">
-        {{ player.episode.podcast.title }}
-      </h1>
+      <div id="player-title">
+        <span>
+          {{ player.episode.podcast.title }}
+        </span>
+      </div>
     </a>
     <p id="player-date">
       {{ player.episode.pubDate }}
@@ -23,9 +25,11 @@
     <p id="player-episode">
       {{ player.episode.title }}
     </p>
-    <audio id="audio-el" controls preload="metadata" autoplay>
-      <source src="{{ player.episode.url }}"/>
-    </audio>
+    <div id="audio-el">
+      <audio controls preload="metadata" autoplay>
+        <source src="{{ player.episode.url }}"/>
+      </audio>
+    </div>
   </div>
 </div>
 {% endif %}
