--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -52,7 +52,7 @@
           <!-- LAST PLAYED -->
           <div class="col-12 order-2 col-md-6 order-md-3" id="right">
             <div class="row" id="last-played-header">
-              <div class="col-12">
+              <div class="col-12 color-5-trans">
                 <h1>
                   Last played
                 </h1>
