--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -5,7 +5,7 @@ settings
 {% endblock %}
 
 {% block center-stage %}
-<div class="col results" id="settings">
+<div class="col results color-5-trans" id="settings">
   <form id="settings-form" action="{% url 'settings' %}" method="POST">
     <button type="submit" id="settings-save"class="btn-dope active">Save</button>
     <h3>
