--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -106,7 +106,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
       </a>
     {% elif results.selected_provider == 'itunes' %}
       <a class="btn-dope active provider-button" href="{{ results.urls.provider_url }}&provider=dopepod">
-        On itunes
+        On iTunes
       </a>
     {% endif %}
   </div>
