--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,19 +1,19 @@
 <table class="table" id="episodes-table">
   <thead>
     <tr>
-      <th>
+      <th class="number">
         #
       </th>
       <th>
         Title
       </th>
-      <th>
+      <th class="date">
         Released
       </th>
-      <th>
+      <th class="size">
         Size
       </th>
-      <th>
+      <th class="length">
         Length
       </th>
     </tr>
@@ -26,7 +26,7 @@
         <tr class="hover toggle" data-toggle="collapse" data-target="#more-collapse{{ forloop.counter }}" aria-expanded="true">
       {% endif %}
         <th scope="row">{{ forloop.revcounter }}</th>
-        <td>
+        <td class="title">
           {{ episode.title }}
         </td>
         <td>
