--- a/index/static/style.css
+++ b/index/static/style.css
@@ -27,6 +27,7 @@ a:hover {
 
 /* BUTTONS */
 .btn-dope {
+  font-size: 14px;
   color: rgb(46, 46, 46);
   border: 2px solid rgba(0, 191, 165, 1);
   padding: .25rem .5rem;
