--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -1,20 +1,16 @@
 <div class="col-12 results-content">
   {% if results.view == 'list' %}
-  <div class="row collapse results-collapse view-collapse-{{ results.drop }}">
+  <div class="row collapse results-collapse">
   {% else %}
-  <div class="row collapse results-collapse view-collapse-{{ results.drop }} show">
+  <div class="row collapse results-collapse show">
   {% endif %}
     {% for podcast in results.podcasts %}
       <div class="col-lg-2 col-md-3 col-4 result-box">
         <a class="showpod" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
-          <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}360x360bb.jpg&w=150&h=150&t=absolute" />
-        </a>
-        <a class="showpod" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
+          <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}360x360bb.jpg&w=200&h=200&t=absolute" />
           <h1 class="search-result-title">
             {{ podcast.title }}
           </h1>
-        </a>
-        <a class="showpod" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
           <p class="search-result-artist">
             by {{ podcast.artist }}
           </p>
