--- a/index/static/style.css
+++ b/index/static/style.css
@@ -778,18 +778,13 @@ a:hover {
 .showpod-side-list {
   list-style: none;
   padding: 0;
-  margin-bottom: 0;
+  margin-bottom: 20px;
 }
 .showpod-side-list li {
   border-bottom: 2px solid rgba(0, 191, 165, 1);
   margin-top: 5px;
 }
-.showpod-options {
-  padding-top: 10px;
-  display: inline-block;
-}
-.showpod-extra-options {
-  padding-top: 10px;
+#showpod-c .sub-button, .showpod-options {
   float: right;
 }
 #showpod-copyright {
@@ -817,6 +812,7 @@ a:hover {
   -webkit-transition: all .15s ease-in-out;
 }
 .showpod-image img {
+  margin-bottom: 10px;
   -webkit-box-shadow: rgba(0,0,0,.5) 0 0 5px;
   -moz-box-shadow: rgba(0,0,0,.5) 0 0 5px;
   box-shadow: rgba(0,0,0,.5) 0 0 5px;
@@ -1058,10 +1054,7 @@ a:hover {
 .charts-box {
   padding: 10px 10px 0 10px;
 }
-.subscriptions-box {
-  padding: 10px;
-}
-.subscriptions-result {
+.charts-result {
   display: inline-block;
   width: 100%;
   padding: 10px;
@@ -1071,7 +1064,7 @@ a:hover {
   -moz-transition: all .25s ease-in-out;
   -webkit-transition: all .25s ease-in-out;
 }
-.subscriptions-result:hover {
+.subscriptions-result:hover, .charts-result:hover {
   box-shadow: rgba(0,0,0,.3) 0 0 10px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 0 10px;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 0 10px;
@@ -1084,22 +1077,6 @@ a:hover {
   box-shadow: rgba(0,0,0,.3) 0 0 3px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 0 3px;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 0 3px;
-}
-.charts-result {
-  display: inline-block;
-  width: 100%;
-  padding: 10px;
-  border-radius: .25rem;
-  border: 2px solid rgba(0, 191,165, 0);
-  transition: all .25s ease-in-out;
-  -moz-transition: all .25s ease-in-out;
-  -webkit-transition: all .25s ease-in-out;
-}
-.charts-result:hover {
-  box-shadow: rgba(0,0,0,.3) 0 0 10px;
-  -moz-box-shadow: rgba(0,0,0,.3) 0 0 10px;
-  -webkit-box-shadow: rgba(0,0,0,.3) 0 0 10px;
-  border: 2px solid rgba(0, 191,165, 1);
 }
 .charts-result img {
   margin-left: 5px;
@@ -1133,10 +1110,10 @@ a:hover {
   font-size: 16px;
   overflow: hidden;
   height: 39px;
-  margin-bottom: 4px;
+  margin-bottom: 3px;
 }
 .charts-result .result-artist, .charts-result .result-artist:hover {
-  margin-bottom: 0;
+  margin-bottom: 3px;
   font-weight: 400;
   font-size: 14px;
   overflow: hidden;
@@ -1225,17 +1202,30 @@ a:hover {
   overflow: hidden;
   margin: 0;
 }
-.subscriptions-result .result-title, .subscriptions-result .result-title:hover {
-  font-size: 20px;
-  height: 50px;
+.subscriptions-box {
+  padding: 10px;
+}
+.subscriptions-box img {
+  float: left;
+  margin-right: 5px;
+}
+.subscriptions-box .result-title {
+  color: rgba(0, 191, 165, 1);
+  font-size: 16px;
+  height: 36px;
+  margin-bottom: 4px;
   overflow: hidden;
 }
-.subscriptions-result .result-artist, .subscriptions-result .result-artist:hover {
-  margin-bottom: 0;
+.subscriptions-box .result-title:hover {
+  color: rgba(0, 105, 92, 1);
+}
+.subscriptions-box .last-updated {
+  margin-bottom: 4px;
   font-weight: 400;
-  font-size: 14px;
   overflow: hidden;
-  height: 40px;
+}
+.select-subscription {
+  float: right;
 }
 .browse-results {
   padding: 0 10px;
