--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -14,6 +14,23 @@ Listen to episodes of {{ podcast.title }} on dopepod
       </div>
     </div>
     <div class="col-12 col-lg-5" id="showpod-c" data-podid="{{ podcast.podid }}">
+      <button class="btn-dope back-button" onclick="window.history.back()">
+        <i class="fas fa-arrow-circle-left"></i>
+      </button>
+      {% if user.is_authenticated %}
+        <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="podid" value="{{ podcast.podid }}">
+          {% if podcast.is_subscribed %}
+            <button type="submit" class="btn-dope sub-button">
+              Unsubscribe
+          {% else %}
+            <button type="submit" class="btn-dope active sub-button">
+              Subscribe
+          {% endif %}
+          </button>
+        </form>
+      {% endif %}
       <h1 id="showpod-title">
         {{ podcast.title }}
       </h1>
@@ -117,26 +134,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
           </em>
         </li>
       </ul>
-    </div>
-    <div class="col-12">
       <div class="showpod-options">
-        <button class="btn-dope back-button" onclick="window.history.back()">
-          <i class="fas fa-arrow-circle-left"></i>
-        </button>
-        {% if user.is_authenticated %}
-          <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="podid" value="{{ podcast.podid }}">
-            {% if podcast.is_subscribed %}
-              <button type="submit" class="btn-dope btn-dope-showpod sub-button">
-                Unsubscribe
-            {% else %}
-              <button type="submit" class="btn-dope btn-dope-showpod active sub-button">
-                Subscribe
-            {% endif %}
-              </button>
-          </form>
-        {% endif %}
         <a class="btn-dope toggle show-episodes" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
           Episodes
         </a>
@@ -146,22 +144,6 @@ Listen to episodes of {{ podcast.title }} on dopepod
           </span>
         </button>
       </div>
-      <div class="showpod-extra-options">
-          <a class="btn-dope results-minimize reverse-toggle show-episodes" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
-            {% if request.is_ajax %}
-              <i class="fas fa-minus-circle icon"></i>
-            {% else %}
-              -
-            {% endif %}
-          </a>
-          <a class="btn-dope results-close" href="#" aria-label="Close">
-            {% if request.is_ajax %}
-              <i class="fas fa-times-circle icon"></i>
-            {% else %}
-              x
-            {% endif %}
-          </a>
-        </div>
     </div>
     <div class="col-12 collapse show" id="episodes-collapse">
       {% if episodes %}
